2005-01-09  Stephane LOEUILLET  <stephane.loeuillet@tiscali.fr>

	* ext/dvdread/stream_labels.c: new file
	* ext/dvdread/stream_labels.h: new file
	* ext/dvdread/Makefile.am:
	* ext/dvdread/dvdreadsrc.c: (_seek_title):
	  Extract audio stream label from DVD IFO files.
	  It only dump them on the console for now, still have to
	  make playbin aware of them.

2005-01-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/playback/gstplaybasebin.c: (setup_source):
	  Fix hanging subs.

2005-01-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/playback/gstplaybasebin.c: (gst_play_base_bin_init),
	(gen_preroll_element), (remove_groups), (setup_subtitle),
	(gen_source_element), (setup_source):
	* gst/playback/gstplaybasebin.h:
	  Multiple .sub files is just a stupid idea... Fix some threading
	  mistakes. Interestingly, external .sub files cause playbin to
	  hang, I don't know why... Parsing fixes contributed by François
	  Kooman <fkooman@tuxed.net>.

2005-01-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* testsuite/embed/Makefile.am:
	  Fix buildbot.

2005-01-09  Gergely Nagy  <algernon@bonehunter.rulez.org>

	Reviewed by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/libpng/gstpngenc.c: (gst_pngenc_class_init),
	(gst_pngenc_init), (gst_pngenc_chain), (gst_pngenc_get_property),
	(gst_pngenc_set_property):
	* ext/libpng/gstpngenc.h:
	  Add compression level property (#163323).

2005-01-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* configure.ac:
	* examples/capsfilter/capsfilter1.c: (main):
	* examples/seeking/spider_seek.c: (make_spider_pipeline):
	* ext/dvdread/Makefile.am:
	* ext/dvdread/demo-play:
	* ext/dvdread/demo-play.c:
	* gconf/gstreamer.schemas.in:
	* gst-libs/gst/gconf/gconf.c:
	* sys/v4l/TODO:
	* testsuite/Makefile.am:
	* testsuite/embed/Makefile.am:
	* testsuite/embed/embed.c: (cb_expose), (main):
	  Remove all references to xvideosink, fix examples (#140845).
	* gst/playback/gstplaybasebin.c: (group_destroy):